--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
 streamlit
 openai
-langchain
+langchain==0.1.9
+langchain-community==0.0.24
+langchain-core==0.1.35
+langchain-openai==0.0.8
+langchain-text-splitters==0.0.1
+langchainhub==0.1.14
+
