--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,15 @@ streamlit
 openai
 chroma-hnswlib==0.7.3
 chromadb==0.3.29
-langchain==0.1.9
-langchain-community==0.0.24
-langchain-core==0.1.35
-langchain-openai==0.0.8
-langchain-text-splitters==0.0.1
+langchain==0.2.11
+langchain-chroma==0.1.2
+langchain-community==0.2.10
+langchain-core==0.2.24
+langchain-openai==0.1.19
+langchain-text-splitters==0.2.2
+langchainhub==0.1.20
+langdetect==1.0.9
+langsmith==0.1.93
 langchainhub==0.1.14
 bs4
 
