--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,8 @@ Chroma
 chromadb
 chroma-hnswlib
 langchain==0.2.11
-langchain-chroma==0.1.2
 langchain-community==0.2.10
+langchain-chroma
 langchain-core==0.2.24
 langchain-openai==0.1.19
 langchain-text-splitters==0.2.2
