--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ langchain-chroma
 langchain-core==0.2.24
 langchain-openai==0.1.19
 langchain-text-splitters==0.2.2
-langchainhub
+langchainhub==0.1.20
 langdetect==1.0.9
 langsmith==0.1.93
 pydantic==1.10.9
