--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ langchain==0.2.11
 langchain-community
 chromadb
 chroma-hnswlib
+Chroma
 langchain-chroma
 langchain-core==0.2.24
 langchain-openai==0.1.19
@@ -13,5 +14,19 @@ langchainhub==0.1.20
 langdetect==1.0.9
 langsmith==0.1.93
 pydantic==1.10.9
+tokenizers
+tiktoken==0.7.0
+opentelemetry-api==1.26.0
+opentelemetry-exporter-otlp-proto-common==1.26.0
+opentelemetry-exporter-otlp-proto-grpc==1.26.0
+opentelemetry-instrumentation==0.47b0
+opentelemetry-instrumentation-asgi==0.47b0
+opentelemetry-instrumentation-fastapi==0.47b0
+opentelemetry-proto==1.26.0
+opentelemetry-sdk==1.26.0
+opentelemetry-semantic-conventions==0.47b0
+opentelemetry-util-http==0.47b0
+huggingface-hub==0.24.2
+
 bs4
 
